[tool]
[tool.poetry]
name = "wiki_game"
version = "0.1.0"
homepage = "https://github.com/keagud/wiki_game"
description = "Top-level package for wiki_game."
authors = ["Keaton Guderian <keagud@protonmail.com>"]
readme = "README.md"
license =  "0BSD"
classifiers=[
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
packages = [
    { include = "wiki_game" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
coverage = "*"
isort = "*"
pyright = "*"
ruff = "*"

pre-commit = "*"
black = "*"

[tool.poetry.scripts]
wiki_game = 'wiki_game.cli:main'

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
force-exclude = true
exclude = [".venv", "__init__.py"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
